@@ -51,6 +51,7 @@ Added
     * `qute-keepassxc` now supports unlock-on-demand, multiple account
       selection via rofi, and inserting TOTP-codes (experimental).
 - New `colors.webpage.darkmode.increase_text_contrast` setting for Qt 6.3+
+- New `fonts.tooltip`, `colors.tooltip.bg` and `colors.tooltip.fg` settings.
 
 Removed
 ~~~~~~~
